[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rocketl"
version = "0.1"
authors = [
    { name="Kieran Canter", email="him@kicanter.dev" }
]
description = "RocketOdds ETL pipeline CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiolimiter==1.2.1",
    "anyio==4.9.0",
    "asyncio==3.4.3",
    "boto3==1.35.99",
    "botocore==1.35.99",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "markdown-it-py==2.2.0",
    "mdurl==0.1",
    "pyarrow==20.0.0",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "rich==14.0.0",
    "s3transfer==0.10.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
]

[project.scripts]
rocketl = "scripts.main:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
